# puricaml

./: LICENSE  README.md  dune-project  puricaml.opam
.github/workflows/: ci.yaml
example/: ex1.cam  ex1.mml  ex1.zam  ex2.cam  ex2.mml  ex2.zam  ex3.cam  ex3.mml  ex3.zam  ex4.cam  ex4.mml  factorial.mml  map.cam  map.mml  map.zam  quicksort.cam  quicksort.mml  quicksort.zam
src/: cam.ml  dune  eval.ml  lexer.mll  machine.ml  machine_lexer.mll  machine_parser.mly  main.ml  parser.mly  syntax.ml  typecheck.ml  zam.ml
